--- a/windows/bin/xProfile.ini
+++ b/windows/bin/xProfile.ini
@@ -1,2 +1,6 @@
 [Default]
 FACE=0
+[XML]
+URL=HTTPS://118.178.180.81/BED/GET_FAMILY_MEMBER_DATASET
+[JSON]
+URL=HTTPS://118.178.180.81/BED/GET_FAMILY_MEMBER_DATASET
